@@ -1,22 +1,15 @@
 {
-  "timestamp" : "2022-07-16T16:23:18Z",
-  "count_outdated" : 2233,
-  "uniques_outdated" : 479,
-  "count" : 2294,
-  "uniques" : 512,
+  "timestamp" : "2022-07-17T01:57:08Z",
+  "count_outdated" : 2243,
+  "uniques_outdated" : 485,
+  "count" : 2303,
+  "uniques" : 517,
   "clones" : [
     {
-      "timestamp": "2022-07-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 10 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 6 ]
-    },
-    {
       "timestamp": "2022-07-03T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "uniques": 2,
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
     {
@@ -105,10 +98,10 @@
     },
     {
       "timestamp": "2022-07-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
