@@ -1,16 +1,11 @@
 {
-  "count": 61,
+  "count": 60,
   "uniques": 16,
   "clones": [
     {
-      "timestamp": "2022-07-02T00:00:00Z",
+      "timestamp": "2022-07-03T00:00:00Z",
       "count": 1,
       "uniques": 1
-    },
-    {
-      "timestamp": "2022-07-03T00:00:00Z",
-      "count": 2,
-      "uniques": 2
     },
     {
       "timestamp": "2022-07-04T00:00:00Z",
@@ -74,8 +69,8 @@
     },
     {
       "timestamp": "2022-07-16T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
